--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li class="active"><a href = "about.html" >About Me</a></li>
+				<li class="active"><a href = "home.html" >About Me</a></li>
 				<li><a href = "hobbies.html">Hobbies</a></li>
 				<li><a href = "projects.html">Projects</a></li>
 			</ul>
