--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
 		<nav>
 			<ul>
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li class="active"><a href = "home.html" >About Me</a></li>
-				<li><a href = "hobbies.html">Hobbies</a></li>
+				<li class="active"><a href = "home.html" >Home</a></li>
+				<li><a href = "hobbies.html">Extra Curriculurs</a></li>
 				<li><a href = "projects.html">Projects</a></li>
 			</ul>
 		</nav>
@@ -25,11 +25,22 @@
     <!-- Every page should have a main tag for accessibility -->
 	<main id="skip">
 		<p>I am a senior majoring in Computer Science in Engineering. I am from Temperance, 
-            Michigan and attend the Univeristy of Michigan Ann Arbor. Feel free to contact me at: lizch@umich.edu</p>
-        <img src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
-        <img src = "imgs/hike.jpg" width="25" alt = "hike"/>
-        <img src = "imgs/rainier.jpg" width="1000" alt = "rainier"/>
-        <img src = "imgs/mountain.jpg" width="25" alt = "lake"/>
+			Michigan and attend the Univeristy of Michigan Ann Arbor. Feel free to contact me at: lizch@umich.edu</p>
+		<div class = "gallery">
+			<img src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
+			<img src = "imgs/hike.jpg" width="25" alt = "hike"/>
+			<img src = "imgs/rainier.jpg" width="1000" alt = "rainier"/>
+			<img src = "imgs/mountain.jpg" width="25" alt = "mountain"/>
+			<img src = "imgs/profile.jpg" width="25" alt = "profile"/>
+			<img src = "imgs/penn.jpg" width="25" alt = "profile"/>
+			<img src = "imgs/nyc.jpg" width="25" alt = "profile"/>
+			<img src = "imgs/alfred.jpg" width="25" alt = "profile"/>
+			<img src = "imgs/wise_dinner.jpg" width="25" alt = "profile"/>
+		</div>
+		
 	</main>
+	<footer>
+		<p>lizch@umich.edu</p>
+	  </footer>
 </body>
 </html>
