--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
 	<header>
 	  <nav>
 		<ul>
-			<li><a href = "home.html">About Me</a></li>
-			<li><a href = "hobbies.html">Hobbies</a></li>
+			<li><a href = "home.html"> Home</a></li>
+			<li><a href = "hobbies.html">Extracurriculurs</a></li>
 			<li class="active"><a href = "projects.html">Projects</a></li>
 		</ul>
 	   <nav>
@@ -28,6 +28,9 @@
             <li>Unit Import</li>
         </ol>
 	</main>
+	<footer>
+		<p>lizch@umich.edu</p>
+	  </footer>
 </body>
 </html>
 
