--- a/hobbies.html
+++ b/hobbies.html
@@ -11,8 +11,8 @@
 	<header>
 	  <nav>
 		<ul>
-			<li><a href = "home.html">About Me</a></li>
-			<li class="active"><a href = "hobbies.html">Hobbies</a></li>
+			<li><a href = "home.html">Home</a></li>
+			<li class="active"><a href = "hobbies.html">Extra Curriculurs</a></li>
 			<li><a href = "projects.html">Projects</a></li>
 		</ul>
 	   <nav>
@@ -21,13 +21,36 @@
 	<h1>Hobbies</h1>
 	
 	<main id="skip">
-	<p>My interests outside of computer science include hiking, travelling, theatre, reading, and baking<br>
-		<img src = "imgs/stage.jpg" width="25" alt = "stage"/>
-		<img src = "imgs/theatre.jpg" width="1000" alt = "theatre"/>
-		<img src = "imgs/olympic.jpg" width="25" alt = "olympic"/>
-		<img src = "imgs/bread.jpg" width="1000" alt = "bread"/>
-		<img src = "imgs/lake.jpg" width="25" alt = "lake"/>
+		<h2>Clubs</h2>
+		<p>At the University of Michigan I have been involved with Baja Racing,
+			Geecs (Girls in Eletrical Engineering and Computer Science), WISE RP 
+			(Women in Science and Engineering Residence Program), UM Musket, and AIV (Asian Intervarsity).
+		</p>
+		<div class = 'curriculur_imgs'>
+			<img src = "imgs/bajateam.jpg" width="25" alt = "baja team"/>
+			<img src = "imgs/wisezoom.jpg" width="25" alt = "wise zoom"/>
+			<img src = "imgs/wiseskate.jpg" width="25" alt = "wise skate"/>
+			<img src = "imgs/aiv.jpg" width="25" alt = "aiv"/>
+			<img src = "imgs/stage.jpg" width="25" alt = "stage"/>
+		</div>
+		<h2>Hobbies</h2>
+		<p>My hobbies include hiking, travelling, baking, and theatre</p>
+		<div class = 'hobbies'>
+			<img src = "imgs/olympic.jpg" width="25" alt = "olympic"/>
+			<img src = "imgs/bread.jpg" width="1000" alt = "bread"/>
+			<img src = "imgs/lake.jpg" width="25" alt = "lake"/>
+			<img src = "imgs/theatre.jpg" width="1000" alt = "theatre"/>
+		</div>
+			
+		
+		
+
 	</main>
+	<footer>
+		<p>Elizabeth Chang</p>
+		<p>LinkedIn: <a href = ></a></p>
+		<p>email: lizch@umich.edu</p>
+	  </footer>
 </body>
 </html>
 
