--- a/home.html
+++ b/home.html
@@ -32,10 +32,10 @@
 			<img src = "imgs/rainier.jpg" width="1000" alt = "rainier"/>
 			<img src = "imgs/mountain.jpg" width="25" alt = "mountain"/>
 			<img src = "imgs/profile.jpg" width="25" alt = "profile"/>
-			<img src = "imgs/penn.jpg" width="25" alt = "profile"/>
-			<img src = "imgs/nyc.jpg" width="25" alt = "profile"/>
-			<img src = "imgs/alfred.jpg" width="25" alt = "profile"/>
-			<img src = "imgs/wise_dinner.jpg" width="25" alt = "profile"/>
+			<img src = "imgs/penn.jpg" width="25" alt = "penn"/>
+			<img src = "imgs/nyc.jpg" width="25" alt = "nyc"/>
+			<img src = "imgs/alfred.jpg" width="25" alt = "alfred"/>
+			<img src = "imgs/wise_dinner.jpg" width="25" alt = "wise dinner"/>
 		</div>
 		
 	</main>
