--- a/home.html
+++ b/home.html
@@ -34,8 +34,8 @@
 			<img src = "imgs/profile.jpg" width="25" alt = "profile"/>
 			<img src = "imgs/penn.jpg" width="25" alt = "penn"/>
 			<img src = "imgs/nyc.jpg" width="25" alt = "nyc"/>
-			<img src = "imgs/alfred.jpg" width="25" alt = "alfred"/>
-			<img src = "imgs/wise_dinner.jpg" width="25" alt = "wise dinner"/>
+			<img src = "imgs/alfred.JPG" width="25" alt = "alfred"/>
+			<img src = "imgs/wise_dinner.JPG" width="25" alt = "wise dinner"/>
 		</div>
 		
 	</main>
