--- a/hobbies.html
+++ b/hobbies.html
@@ -27,10 +27,10 @@
 			(Women in Science and Engineering Residence Program), UM Musket, and AIV (Asian Intervarsity).
 		</p>
 		<div class = 'curriculur_imgs'>
-			<img src = "imgs/bajateam.jpg" width="25" alt = "baja team"/>
-			<img src = "imgs/wisezoom.jpg" width="25" alt = "wise zoom"/>
-			<img src = "imgs/wiseskate.jpg" width="25" alt = "wise skate"/>
-			<img src = "imgs/aiv.jpg" width="25" alt = "aiv"/>
+			<img src = "imgs/bajateam.JPG" width="25" alt = "baja team"/>
+			<img src = "imgs/wisezoom.JPG" width="25" alt = "wise zoom"/>
+			<img src = "imgs/wiseskate.JPG" width="25" alt = "wise skate"/>
+			<img src = "imgs/aiv.JPG" width="25" alt = "aiv"/>
 			<img src = "imgs/stage.jpg" width="25" alt = "stage"/>
 		</div>
 		<h2>Hobbies</h2>
