--- a/projects.html
+++ b/projects.html
@@ -4,29 +4,31 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-	<tite>Projects</title>
+	<title>Projects</title>
 </head>
 <body>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
 	<header>
-	  <nav>
-		<ul>
-			<li><a href = "home.html"> Home</a></li>
-			<li><a href = "hobbies.html">Extracurriculurs</a></li>
-			<li class="active"><a href = "projects.html">Projects</a></li>
-		</ul>
-	   <nav>
+		<div class = "navbar">
+			<nav>
+				<h1>Projects</h1>
+				<a href = "home.html"> Home</a>
+				<a href = "hobbies.html">Extracurriculurs</a>
+				<a class="active" href = "projects.html">Projects</a>
+			</nav>
+		</div>
 	</header>
 
-	<h1>Projects</h1>
 	
-	<main id="skip">
-	<p>Here is a couple of projects I have worked on<br>
-		<ol>
-            <li>Among Us</li>
-            <li>Insta 485</li>
-            <li>Unit Import</li>
-        </ol>
+	<main class="main" id="main">
+		<p>Here is a couple of projects I have worked on<br>
+			<ol>
+				<li>Among Us</li>
+					<p>Implemented</p>
+				<li>Insta 485</li>
+				<li>Unit Import</li>
+			</ol>
+		</p>
 	</main>
 	<footer>
 		<p>lizch@umich.edu</p>
