--- a/hobbies.html
+++ b/hobbies.html
@@ -4,23 +4,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-	<tite>Hobbies</title>
+	<title>Hobbies</title>
 </head>
 <body>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
 	<header>
-	  <nav>
-		<ul>
-			<li><a href = "home.html">Home</a></li>
-			<li class="active"><a href = "hobbies.html">Extra Curriculurs</a></li>
-			<li><a href = "projects.html">Projects</a></li>
-		</ul>
-	   <nav>
+		<div class = "navbar">
+			<nav>
+				<h1>Learn about my passions!</h1>
+				<a href = "home.html"> Home</a>
+				<a class="active" href = "hobbies.html">Extracurriculurs</a>
+				<a href = "projects.html">Projects</a>
+			</nav>
+		</div>
 	</header>
 
-	<h1>Hobbies</h1>
-	
-	<main id="skip">
+	<main class="main" id="main">
 		<h2>Clubs</h2>
 		<p>At the University of Michigan I have been involved with Baja Racing,
 			Geecs (Girls in Eletrical Engineering and Computer Science), WISE RP 
