--- a/home.html
+++ b/home.html
@@ -8,24 +8,28 @@
     <title>Home</title>
 </head>
 <body>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
 		<!-- Nav is a sematic tag page that aids accessibility -->
-		<nav>
-			<ul>
-				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li class="active"><a href = "home.html" >Home</a></li>
-				<li><a href = "hobbies.html">Extra Curriculurs</a></li>
-				<li><a href = "projects.html">Projects</a></li>
-			</ul>
-		</nav>
-		<!-- The h1 is a semantic tag that aids accessibility -->
-		<h1>Welcome to my Portfolio!</h1>
+		<div class = "navbar">
+			<h1>Welcome to my Portfolio!</h1>
+			<nav>
+				<a class="active" href = "home.html"> Home</a>
+				<a href = "hobbies.html">Extracurriculurs</a>
+				<a href = "projects.html">Projects</a>
+			</nav>
+		</div>
+		
 	</header>
     <!-- Every page should have a main tag for accessibility -->
-	<main id="skip">
-		<p>I am a senior majoring in Computer Science in Engineering. I am from Temperance, 
-			Michigan and attend the Univeristy of Michigan Ann Arbor. Feel free to contact me at: lizch@umich.edu</p>
+	<div class = "main">
+	<main class="main" id="main">
+		<p>Hi! Welcome to my personal website! 
+			I am a senior majoring in Computer Science in Engineering. I am from Temperance, 
+			Michigan and attend the Univeristy of Michigan Ann Arbor.
+			I seek interest in working in full-stack development. Learn about me through images!
+			Feel free to contact me at: <a href = "mailto: lizch@umich.edu">lizch@umich.edu</a>
+		</p>
 		<div class = "gallery">
 			<img src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
 			<img src = "imgs/hike.jpg" width="25" alt = "hike"/>
@@ -39,8 +43,11 @@
 		</div>
 		
 	</main>
+</div>
 	<footer>
-		<p>lizch@umich.edu</p>
+		<p>Elizabeth Chang</p>
+		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
+		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
 	  </footer>
 </body>
 </html>
