--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
 	<title>Hobbies</title>
 </head>
@@ -47,9 +48,9 @@
 	</main>
 	<footer>
 		<p>Elizabeth Chang</p>
-		<p>LinkedIn: <a href = ></a></p>
-		<p>email: lizch@umich.edu</p>
-	  </footer>
+		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
+		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
+	</footer>
 </body>
 </html>
 
