--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
@@ -48,6 +49,6 @@
 		<p>Elizabeth Chang</p>
 		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
 		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
-	  </footer>
+	</footer>
 </body>
 </html>
