--- a/home.html
+++ b/home.html
@@ -25,7 +25,8 @@
     <!-- Every page should have a main tag for accessibility -->
 	<div class = "main">
 	<main class="main" id="main">
-		<p>Hi! Welcome to my personal website! 
+		<button type="button" class = 'but' id = 'read'>Read about me! <br> Click here</button>
+		<p id="readtxt">Hi! Welcome to my personal website! 
 			I am a senior majoring in Computer Science in Engineering. I am from Temperance, 
 			Michigan and attend the Univeristy of Michigan Ann Arbor.
 			I seek interest in working in full-stack development. Learn about me through images!
@@ -50,5 +51,6 @@
 		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
 		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
 	</footer>
+	<script src = "js/home.js"></script>
 </body>
 </html>
