--- a/hobbies.html
+++ b/hobbies.html
@@ -21,25 +21,72 @@
 	</header>
 
 	<main class="main" id="main">
-		<h2>Clubs</h2>
-		<p>At the University of Michigan I have been involved with Baja Racing,
+		<button type="button" class = 'but' id = 'clubs'><h2>Clubs <br>(Click to read!)</h2></button>
+		
+		<p id = 'clubstxt'>At the University of Michigan I have been involved with Baja Racing,
 			Geecs (Girls in Eletrical Engineering and Computer Science), WISE RP 
 			(Women in Science and Engineering Residence Program), UM Musket, and AIV (Asian Intervarsity).
+			Click on the image read more.
 		</p>
 		<div class = 'curriculur_imgs'>
-			<img src = "imgs/bajateam.JPG" width="25" alt = "baja team"/>
-			<img src = "imgs/wisezoom.JPG" width="25" alt = "wise zoom"/>
-			<img src = "imgs/wiseskate.JPG" width="25" alt = "wise skate"/>
-			<img src = "imgs/aiv.JPG" width="25" alt = "aiv"/>
-			<img src = "imgs/stage.jpg" width="25" alt = "stage"/>
+			<div>
+				<img  tabindex="0" id='baja' src = "imgs/bajateam.JPG" width="25" alt = "baja team"/>
+				<p id = 'bajatxt'>UMich Baja Racing SAE Team 2020
+					<br>
+					Build an off road race-car each year, completely student run
+				</p>	
+			</div>
+			<div>
+				<img tabindex="0" id='wisezoom' src = "imgs/wisezoom.JPG" width="25" alt = "wise zoom"/>
+				<p id = 'wztxt'>WISE RP 2021
+					<br>
+					Peer Mentors meet and catch up long distance due to Covid!
+				</p>
+			</div>
+			<div>
+				<img tabindex="0" id='ws'src = "imgs/wiseskate.JPG" width="25" alt = "wise skate"/>
+				<p id = 'wstxt'>WISE RP 2020
+					<br>
+					WISE RP skate event!
+				</p>
+			</div>
+			<div>
+				<img tabindex="0" id='aiv'src = "imgs/aiv.JPG" width="25" alt = "aiv"/>
+				<p id = 'aivtxt'>AIV 2020
+					<br>
+					Fellowship Bonding at Pumpkin Patch
+				</p>
+			</div>
+			<div>
+				<img tabindex="0" id='stage' src = "imgs/stage.jpg" width="25" alt = "stage"/>
+				<p id = 'sgtxt'>UM Musket 2022
+					<br>
+					Helping out backstage for Little Shop of Horrors Musical Production
+				</p>
+			</div>
+			
 		</div>
-		<h2>Hobbies</h2>
-		<p>My hobbies include hiking, travelling, baking, and theatre</p>
+		<button type="button" class = 'but' id = 'hobs'><h2>Hobbies <br>(Click to read!)</h2></button>
+		
+		<p id = 'hobstxt'>My hobbies include hiking, travelling, baking, and theatre. Click images for descriptions</p>
 		<div class = 'hobbies'>
-			<img src = "imgs/olympic.jpg" width="25" alt = "olympic"/>
-			<img src = "imgs/bread.jpg" width="1000" alt = "bread"/>
-			<img src = "imgs/lake.jpg" width="25" alt = "lake"/>
-			<img src = "imgs/theatre.jpg" width="1000" alt = "theatre"/>
+			<div>
+				<img tabindex="0" id='olympic' src = "imgs/olympic.jpg" width="25" alt = "olympic"/>
+				<p id = 'omtxt'>Hiking Olympic National Park Summer 2022</p>
+			</div>
+			<div>
+				<img tabindex="0" id='bread'src = "imgs/bread.jpg" width="1000" alt = "bread"/>
+				<p id="breadtxt">Baking banana and lemon bread</p>
+			</div>
+			<div>
+				<img tabindex="0" id='lake' src = "imgs/lake.jpg" width="25" alt = "lake"/>
+				<p id='laketxt'>Lake Serene in Seattle, Washington</p>
+			</div>
+			<div>
+				<img tabindex="0" id='horse' src = "imgs/theatre.jpg" width="1000" alt = "theatre"/>
+				<p id="horsetxt">Peforming in Horse Girls through UM Basement Arts 2023</p>
+			</div>
+			
 		</div>
 			
 		
@@ -51,6 +98,7 @@
 		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
 		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
 	</footer>
+	<script src = "js/hobbies.js"></script>
 </body>
 </html>
 
