--- a/hobbies.html
+++ b/hobbies.html
@@ -51,7 +51,7 @@
 				</p>
 			</div>
 			<div>
-				<img tabindex="0" id='aiv'src = "imgs/aiv.JPG" width="25" alt = "aiv"/>
+				<img tabindex="0" id='aiv'src = "imgs/aiv.JPG" width="25" alt = "Asian Intervaristy"/>
 				<p id = 'aivtxt'>AIV 2020
 					<br>
 					Fellowship Bonding at Pumpkin Patch
@@ -71,7 +71,7 @@
 		<p id = 'hobstxt'>My hobbies include hiking, travelling, baking, and theatre. Click images for descriptions</p>
 		<div class = 'hobbies'>
 			<div>
-				<img tabindex="0" id='olympic' src = "imgs/olympic.jpg" width="25" alt = "olympic"/>
+				<img tabindex="0" id='olympic' src = "imgs/olympic.jpg" width="25" alt = "Olympic National Park"/>
 				<p id = 'omtxt'>Hiking Olympic National Park Summer 2022</p>
 			</div>
 			<div>
@@ -79,7 +79,7 @@
 				<p id="breadtxt">Baking banana and lemon bread</p>
 			</div>
 			<div>
-				<img tabindex="0" id='lake' src = "imgs/lake.jpg" width="25" alt = "lake"/>
+				<img tabindex="0" id='lake' src = "imgs/lake.jpg" width="25" alt = "Lake Serene"/>
 				<p id='laketxt'>Lake Serene in Seattle, Washington</p>
 			</div>
 			<div>
