--- a/hobbies.html
+++ b/hobbies.html
@@ -71,7 +71,7 @@
 		<p id = 'hobstxt'>My hobbies include hiking, travelling, baking, and theatre. Click images for descriptions</p>
 		<div class = 'hobbies'>
 			<div>
-				<img tabindex="0" id='olympic' src = "imgs/olympic.jpg" width="25" alt = "Olympic National Park"/>
+				<img tabindex="0" id='olympic' src = "imgs/olympic.jpg" width="25" alt = "One of the National Parks I hiked!"/>
 				<p id = 'omtxt'>Hiking Olympic National Park Summer 2022</p>
 			</div>
 			<div>
@@ -79,7 +79,7 @@
 				<p id="breadtxt">Baking banana and lemon bread</p>
 			</div>
 			<div>
-				<img tabindex="0" id='lake' src = "imgs/lake.jpg" width="25" alt = "Lake Serene"/>
+				<img tabindex="0" id='lake' src = "imgs/lake.jpg" width="25" alt = "Hiking Lake Serene"/>
 				<p id='laketxt'>Lake Serene in Seattle, Washington</p>
 			</div>
 			<div>
