--- a/projects.html
+++ b/projects.html
@@ -26,21 +26,21 @@
 			
 				<ol>
 					<div class = 'projs'>
-					<div class = 'box1'>
+					<div tabindex="0" class = 'box1'>
 						<li>Among Us</li>
 						<p id = 'exp'>Implemented a MST algorithm and developed a fast, effective 
 							branch and bound algorithm to figure out crewmates fastest path to complete tasks.
 							Tested and debugged, determining best runtime options with certain tradeoffs
 						</p>
 					</div>
-					<div class="'box2">
+					<div tabindex="0" class="'box2">
 						<li>Insta 485</li>
 						<p id = 'exp'>Created a fully functional Instagram where logged in user can follow/unfollow other 
 							users and create/delete posts, comments, and likes using client-side dynamic pages.
 							Mimics all Instagram features such as creating/deleting an account, changing password, editing profile, etc
 						</p>
 					</div>
-					<div class = 'box3'>
+					<div tabindex="0" class = 'box3'>
 						<li>Unit Import</li>
 						<p id = 'exp'>
 							Intern on the Employee Experience Hierarchies team which is a team of 8 people that helps with analyzing and creating surveys that gage how happy employees are doing and how to improve. 
