--- a/home.html
+++ b/home.html
@@ -33,15 +33,15 @@
 			Feel free to contact me at: <a href = "mailto: lizch@umich.edu">lizch@umich.edu</a>
 		</p>
 		<div class = "gallery">
-			<img src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
-			<img src = "imgs/hike.jpg" width="25" alt = "hike"/>
-			<img src = "imgs/rainier.jpg" width="1000" alt = "rainier"/>
-			<img src = "imgs/mountain.jpg" width="25" alt = "mountain"/>
-			<img src = "imgs/profile.jpg" width="25" alt = "profile"/>
-			<img src = "imgs/penn.jpg" width="25" alt = "penn"/>
-			<img src = "imgs/nyc.jpg" width="25" alt = "nyc"/>
-			<img src = "imgs/alfred.JPG" width="25" alt = "alfred"/>
-			<img src = "imgs/wise_dinner.JPG" width="25" alt = "wise dinner"/>
+			<img tabindex="0" src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
+			<img tabindex="0" src = "imgs/hike.jpg" width="25" alt = "hike"/>
+			<img tabindex="0" src = "imgs/rainier.jpg" width="1000" alt = "rainier"/>
+			<img tabindex="0" src = "imgs/mountain.jpg" width="25" alt = "mountain"/>
+			<img tabindex="0" src = "imgs/profile.jpg" width="25" alt = "profile"/>
+			<img tabindex="0" src = "imgs/penn.jpg" width="25" alt = "penn"/>
+			<img tabindex="0" src = "imgs/nyc.jpg" width="25" alt = "nyc"/>
+			<img tabindex="0" src = "imgs/alfred.JPG" width="25" alt = "alfred"/>
+			<img tabindex="0" src = "imgs/wise_dinner.JPG" width="25" alt = "wise dinner"/>
 		</div>
 		
 	</main>
