--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -23,39 +24,36 @@
 	
 	<main class="main" id="main">
 		<p>Here is a couple of projects I have worked on<br>
-			
-				<ol>
-					<div class = 'projs'>
-					<div tabindex="0" class = 'box1'>
-						<li>Among Us</li>
-						<p id = 'exp'>Implemented a MST algorithm and developed a fast, effective 
-							branch and bound algorithm to figure out crewmates fastest path to complete tasks.
-							Tested and debugged, determining best runtime options with certain tradeoffs
-						</p>
-					</div>
-					<div tabindex="0" class="'box2">
-						<li>Insta 485</li>
-						<p id = 'exp'>Created a fully functional Instagram where logged in user can follow/unfollow other 
-							users and create/delete posts, comments, and likes using client-side dynamic pages.
-							Mimics all Instagram features such as creating/deleting an account, changing password, editing profile, etc
-						</p>
-					</div>
-					<div tabindex="0" class = 'box3'>
-						<li>Unit Import</li>
-						<p id = 'exp'>
-							Intern on the Employee Experience Hierarchies team which is a team of 8 people that helps with analyzing and creating surveys that gage how happy employees are doing and how to improve. 
-							I specifically worked on a feature called “unit import” which allows a hierarchy (composed of managers and direct reports) to be modified through importing a file with new units specifically changing the workflow from a synchronous workflow to an asynchronous one. This allows users to 
-							see feedback into the job as the task runs online. Heavily coded in Java with the framework Spring Boot. Also worked on the frontend using HTML/CSS. Communicated daily with my team during standups discussing what I accomplished the day before and what I would be working on next. Used Jira to keep track of bugs and tasks. 
-							Also communicated with project manager on requirements and the user interface developer on how the UI and language translations should look.
-						</p>
-					</div>
-					<div class = 'box4'>
-						<img src = "imgs/laptopturtle.jpg" width="1000" alt = "laptop"/>
-					</div>
+			<div class = 'projs' id = 'exp'>
+				<div tabindex="0" class = 'box1'>
+					<h2>1. Among Us</h2>
+					<p>Implemented a MST algorithm and developed a fast, effective 
+						branch and bound algorithm to figure out crewmates fastest path to complete tasks.
+						Tested and debugged, determining best runtime options with certain tradeoffs
+					</p>
 				</div>
-				</ol>
-			
-		</p>
+				<div tabindex="0" class="'box2">
+					<h2>2. Insta 485</h2>
+					<p>Created a fully functional Instagram where logged in user can follow/unfollow other 
+						users and create/delete posts, comments, and likes using client-side dynamic pages.
+						Mimics all Instagram features such as creating/deleting an account, changing password, editing profile, etc
+					</p>
+				</div>
+				<div tabindex="0" class = 'box3'>
+					<h2>3. Unit Import</h2>
+					<p>
+						Intern on the Employee Experience Hierarchies team which is a team of 8 people that helps with analyzing and creating surveys that gage how happy employees are doing and how to improve. 
+						I specifically worked on a feature called “unit import” which allows a hierarchy (composed of managers and direct reports) to be modified through importing a file with new units specifically changing the workflow from a synchronous workflow to an asynchronous one. This allows users to 
+						see feedback into the job as the task runs online. Heavily coded in Java with the framework Spring Boot. Also worked on the frontend using HTML/CSS. Communicated daily with my team during standups discussing what I accomplished the day before and what I would be working on next. Used Jira to keep track of bugs and tasks. 
+						Also communicated with project manager on requirements and the user interface developer on how the UI and language translations should look.
+					</p>
+				</div>
+				<div tabindex="0" class = 'box4'>
+					<img src = "imgs/laptopturtle.jpg" width="1000" alt = "laptop"/>
+				</div>
+
+		
+			</div>
 	</main>
 	<footer>
 		<p>Elizabeth Chang</p>
