--- a/home.html
+++ b/home.html
@@ -27,8 +27,7 @@
 	<main class="main" id="main">
 		<button type="button" class = 'but' id = 'read'>Read about me! <br> Click here</button>
 		<p id="readtxt">Hi! Welcome to my personal website! 
-			I am a senior majoring in Computer Science in Engineering. I am from Temperance, 
-			Michigan and attend the Univeristy of Michigan Ann Arbor.
+			I am a recent graduate with a Bachelors in Computer Science in Engineering from the University of Michigan.
 			I seek interest in working in full-stack development. Learn about me through images!
 			Feel free to contact me at: <a href = "mailto: lizch@umich.edu">lizch@umich.edu</a>
 		</p>
