--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 		<p id="readtxt">Hi! Welcome to my personal website! 
 			I am a recent graduate with a Bachelors in Computer Science in Engineering from the University of Michigan.
 			I seek interest in working in full-stack development. Learn about me through images!
-			Feel free to contact me at: <a href = "mailto: lizch@umich.edu">lizch@umich.edu</a>
+			Feel free to contact me at: <a href = "mailto: eccchang34@gmail.com">eccchang34@gmail.com</a>
 		</p>
 		<div class = "gallery">
 			<img tabindex="0" src = "imgs/fountain.jpg" width="1000" alt = "fountain"/>
@@ -48,7 +48,7 @@
 	<footer>
 		<p>Elizabeth Chang</p>
 		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
-		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
+		<p>Email:<a href = "mailto: eccchang34@gmail.com">eccchang34@gmail.com</a></p>
 	</footer>
 	<script src = "js/home.js"></script>
 </body>
