--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 	<footer>
 		<p>Elizabeth Chang</p>
 		<p>LinkedIn://<a href = 'https://www.linkedin.com/in/elizabeth-chang-5179931aa/'>elizabeth-chang-5179931aa</a></p>
-		<p>Email:<a href = "mailto: lizch@umich.edu">lizch@umich.edu</a></p>
+		<p>Email:<a href = "mailto: eccchang34@gmail.com">eccchang34@gmail.com</a></p>
 	</footer>
 </body>
 </html>
